# project-oob-sem2

./: .gitignore  201h.network  CMakeLists.txt  GameEngine.cpp  GameEngine.h  README.md  a.out  compile.sh  constants.h  docs.md  instrukcje_bateria  kompile.sh  main.cpp  plik
archive/: 456.network  agressive_slow.network  last_best.network
builds/: project
cpp/: CMakeCache.txt  Makefile  cmake_install.cmake  project  project.cbp
cpp/show/: another_fighter.network  game  last_best.network  nokciec.network  quite_a_fighter.network
cpp/src/: Doxyfile  main.cpp
cpp/src/headers/: Boost.h  Bullet.h  Controller.h  DummyController.h  FieldOfView.h  GameEngine.h  GameManager.h  GameObject.h  Gun.h  KeyboardController.h  NeuralController.h  NeuralNet.h  Plane.h  RandomGenerator.h  Skill.h  SynapseLayer.h
cpp/src/implementations/: Boost.cpp  Bullet.cpp  FieldOfView.cpp  GameEngine.cpp  GameManager.cpp  GameObject.cpp  Gun.cpp  KeyboardController.cpp  NeuralController.cpp  NeuralNet.cpp  Plane.cpp  Skill.cpp  SynapseLayer.cpp
cpp/src/utils/: constants.h  functions.cpp
headers/: Bullet.h  Controller.h  GameEngine.h  GameEngine.h.gch  GameObject.h  Gun.h  KeyboardController.h  Plane.h  Skill.h
headers/skills/: Gun.h
implementation/: Bullet.cpp  GameEngine.cpp  Gun.cpp  Plane.cpp  Skill.cpp
implementation/skills/: Gun.cpp
implementations/: Bullet.cpp  DummyController.cpp  GameEngine.cpp  Gun.cpp  KeyboardController.cpp  Plane.cpp  Skill.cpp
python-planes/: Bullet.py  Controller.py  FieldOfView.py  GameEngine.py  GameObject.py  NeuralController.py  Plane.py  UtilClasses.py  UtilFunctions.py  constants.py  readme.md
show/: game  last_best.network
src/: main.cpp
src/headers/: Boost.h  Bullet.h  Controller.h  DummyController.h  FieldOfView.h  GameEngine.h  GameManager.h  GameObject.h  Gun.h  KeyboardController.h  NeuralController.h  NeuralNet.h  Plane.h  RandomGenerator.h  SynapseLayer.cpp  SynapseLayer.h
src/implementations/: Boost.cpp  Bullet.cpp  Controller.cpp  FieldOfView.cpp  GameEngine.cpp  GameManager.cpp  GameObject.cpp  Gun.cpp  KeyboardController.cpp  NeuralController.cpp  NeuralNet.cpp  Plane.cpp  RandomGenerator.cpp  Skill.cpp  SynapseLayer.cpp  SynapseLayer.h
src/utils/: constants.h  structs.h
uml/: html.html  scheme.mdj
utils/: constants.h
